fix bad import positions of shapes & controls fdo#49430

Change-Id: I5635ee681288cb39a11d00c5573e61c582d7daf7