sc/source/ui/unoobj/docuno.cxx
@@ -194,55 +194,6 @@ const SfxItemPropertyMapEntry* lcl_GetRowsPropertyMap()
     return aRowsPropertyMap_Impl;
 }
 
-struct OrientationInfo
-{
-    OrientationInfo() : mnVert( 0 ), mnHori( 0 ) {}
-    uno::Reference< beans::XPropertySet > mxShape;
-    sal_Int32 mnVert;
-    sal_Int32 mnHori;
-};
-
-void lcl_captureShapeOrientationInfo( std::vector< OrientationInfo >& infos, ScModelObj& rModel )
-{
-    rtl::OUString sHori( RTL_CONSTASCII_USTRINGPARAM( SC_UNONAME_HORIPOS ) );
-    rtl::OUString sVert( RTL_CONSTASCII_USTRINGPARAM( SC_UNONAME_VERTPOS ) );
-
-    uno::Reference<container::XIndexAccess> xPages( rModel.getDrawPages(), uno::UNO_QUERY );
-    if ( xPages.is() )
-    {
-        for ( sal_Int32 nIndex = 0, nPages = xPages->getCount(); nIndex < nPages; ++nIndex )
-        {
-            uno::Reference<container::XIndexAccess> xShapes( xPages->getByIndex( nIndex ), uno::UNO_QUERY );
-            for ( sal_Int32 nShapeIndex = 0, nShapes = xShapes->getCount(); nShapeIndex < nShapes; ++nShapeIndex )
-            {
-                uno::Reference< beans::XPropertySet > xShape( xShapes->getByIndex( nShapeIndex ), uno::UNO_QUERY );
-                uno::Reference< table::XCell > xCell( xShape->getPropertyValue( rtl::OUString( RTL_CONSTASCII_USTRINGPARAM( SC_UNONAME_ANCHOR ) ) ), uno::UNO_QUERY );
-                // only capture orientation if the shape is anchored to cell
-                if ( xShape.is() && xCell.is() )
-                {
-                    uno::Reference< beans::XPropertySetInfo > xPropInfo = xShape->getPropertySetInfo();
-                    if ( xPropInfo.is() && xPropInfo->hasPropertyByName( sHori ) && xPropInfo->hasPropertyByName( sVert ) )
-                    {
-                        OrientationInfo aShape;
-                        aShape.mxShape = xShape;
-                        xShape->getPropertyValue( sHori ) >>= aShape.mnHori;
-                        xShape->getPropertyValue( sVert ) >>= aShape.mnVert;
-                        infos.push_back( aShape );
-                    }
-                }
-            }
-        }
-    }
-}
-
-void lcl_applyShapeOrientationInfo( std::vector< OrientationInfo >& infos )
-{
-    for ( std::vector< OrientationInfo >::iterator it = infos.begin(), it_end = infos.end(); it != it_end; ++it )
-    {
-        it->mxShape->setPropertyValue( rtl::OUString( RTL_CONSTASCII_USTRINGPARAM( SC_UNONAME_HORIPOS ) ), uno::makeAny( it->mnHori ) );
-        it->mxShape->setPropertyValue( rtl::OUString( RTL_CONSTASCII_USTRINGPARAM( SC_UNONAME_VERTPOS ) ), uno::makeAny( it->mnVert ) );
-    }
-}
 using sc::HMMToTwips;
 using sc::TwipsToHMM;
 
@@ -1738,13 +1689,19 @@ void SAL_CALL ScModelObj::setPropertyValue(
                     // during import ( e.g. oox ) shapes anchored by cell lose
                     // any additional Hori/Vert orientation ( which offsets the
                     // shape position relative to the cell ) when
-                    // UpdateAllRowHeights is called. Save Hori/Vert values
-                    // before calling UpdateAllRowHeights and re-apply them
-                    // after
+                    // UpdateAllRowHeights is called. Here we save Hori/Vert
+                    // values before calling UpdateAllRowHeights. Also due to
+                    // differences between the drawing layer and gridwindow
+                    // position calculations we actually can't reliably use cell
+                    // anchoring so we need to remove the cell anchoring, custom
+                    // calculate where the view would position the shape and
+                    // then position the shape absolutely at the newly
+                    // calculated postion.
                     std::vector< OrientationInfo > savedOrientations;
-                    lcl_captureShapeOrientationInfo( savedOrientations, *this );
+                    uno::Reference< frame::XModel > xModel( this );
+                    ScGlobal::CaptureShapeOrientationInfo( savedOrientations, xModel );
                     pDocShell->UpdateAllRowHeights();
-                    lcl_applyShapeOrientationInfo( savedOrientations );
+                    ScGlobal::ApplyShapeOrientationInfo( savedOrientations, xModel, *pDoc );
                 }
             }
         }
